--- a/package.json
+++ b/package.json
@@ -3,12 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.5.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.12.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "ckeditor-youtube-plugin": "^2.1.15",
+    "ckeditor4-react": "^1.4.0",
+    "classnames": "^2.2.6",
+    "node-sass": "^4.1.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "sass-loader": "^11.0.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
