--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.5.0",
+    "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -13,12 +14,19 @@
     "ckeditor-youtube-plugin": "^2.1.15",
     "ckeditor4-react": "^1.4.0",
     "classnames": "^2.2.6",
+    "moment": "^2.29.1",
     "node-sass": "^4.1.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-data-table-component": "^6.11.7",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-toastify": "^7.0.3",
+    "redux": "^4.0.5",
+    "redux-promise": "^0.6.0",
     "sass-loader": "^11.0.1",
     "web-vitals": "^1.0.1"
   },
